force-app/main/default/objects/Budget_Salaries__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Renumeration__c</fullName>
        <label>Average Renumeration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_1_Point__c</fullName>
        <label>Cost of 1 Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Staff__c</fullName>
        <label>Number of Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label># Points</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>School_Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Headteacher</fullName>
                </value>
                <value>
                    <fullName>Deputy Headteacher</fullName>
                </value>
                <value>
                    <fullName>Head of Primary</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Primary</fullName>
                </value>
                <value>
                    <fullName>Head of Secondary</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Secondary</fullName>
                </value>
                <value>
                    <fullName>Head of Department</fullName>
                </value>
                <value>
                    <fullName>UK Qualified Teacher Full Package</fullName>
                </value>
                <value>
                    <fullName>UK Qualified Teacher Partial Package</fullName>
                </value>
                <value>
                    <fullName>Non-UK Qualified Expat Teacher Full Package</fullName>
                </value>
                <value>
                    <fullName>Non-UK Qualified Expat Teacher Partial Package</fullName>
                </value>
                <value>
                    <fullName>EAL Teacher</fullName>
                </value>
                <value>
                    <fullName>Local Teacher</fullName>
                </value>
                <value>
                    <fullName>Expat Teacher Assistant</fullName>
                </value>
                <value>
                    <fullName>Local Teacher Assistant</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Science Technician</fullName>
                </value>
                <value>
                    <fullName>Resource Officer</fullName>
                </value>
                <value>
                    <fullName>Outsourced Teacher</fullName>
                </value>
                <value>
                    <fullName>Resident Director</fullName>
                </value>
                <value>
                    <fullName>Head of Administration</fullName>
                </value>
                <value>
                    <fullName>Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Head of Admissions</fullName>
                </value>
                <value>
                    <fullName>Administration Manager</fullName>
                </value>
                <value>
                    <fullName>PA to Headteacher</fullName>
                </value>
                <value>
                    <fullName>Finance Officer</fullName>
                </value>
                <value>
                    <fullName>Procurement Officer</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Admissions Officer</fullName>
                </value>
                <value>
                    <fullName>HR Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Year_Group__c</fullName>
        <label>Primary Year Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PN1</fullName>
                </value>
                <value>
                    <fullName>PN</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Y1</fullName>
                </value>
                <value>
                    <fullName>Y2</fullName>
                </value>
                <value>
                    <fullName>Y3</fullName>
                </value>
                <value>
                    <fullName>Y4</fullName>
                </value>
                <value>
                    <fullName>Y5</fullName>
                </value>
                <value>
                    <fullName>Y6</fullName>
                </value>
                <value>
                    <fullName>All Year Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Salaries</relationshipLabel>
        <relationshipName>Budget_Salaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Department__c</fullName>
        <label>School Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Support Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Section__c</fullName>
        <label>School Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Whole School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialist_Subjects__c</fullName>
        <label>Specialist Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Teaching</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>Specialist Sport</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>General Science</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>EAL</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Foreign Language</fullName>
                </value>
                <value>
                    <fullName>SEN Support</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Names_Optional__c</fullName>
        <label>Staff Names (Optional)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(School_Budget__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost_for_School__c</fullName>
        <formula>(Average_Renumeration__c * Number_of_Staff__c)+ (Points__c * Cost_of_1_Point__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Budget - Salaries</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Budget - Salaries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Salaries</pluralLabel>
    <recordTypes>
        <fullName>Responsibility_Points</fullName>
        <active>true</active>
        <label>Responsibility Points</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Checks_that_Primary_Year_is_chosen</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId &lt;&gt; &quot;012D0000000kKt8&quot;,TEXT(School_Section__c)=&quot;Primary&quot;, TEXT( Primary_Year_Group__c )=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Primary_Year_Group__c</errorDisplayField>
        <errorMessage>You must choose a Primary Year Group, if the School section is Primary</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_that_School_Section_is_chosen</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(School_Department__c)=&quot;Academic&quot;, TEXT(School_Section__c)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>School_Section__c</errorDisplayField>
        <errorMessage>You must choose a School Section, if the Department is Academic</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Choose_Specialist_Subject_if_Secondary</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId &lt;&gt; &quot;012D0000000kKt8&quot;,OR(TEXT( School_Section__c )=&quot;Secondary&quot;,TEXT( School_Section__c )=&quot;Whole School&quot;,TEXT( Primary_Year_Group__c )=&quot;All Year Groups&quot;),ISNULL(Specialist_Subjects__c))</errorConditionFormula>
        <errorDisplayField>Specialist_Subjects__c</errorDisplayField>
        <errorMessage>You must choose a Specialist subject if the School Section is Whole School,Secondary or Primary &quot;All Year Groups&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>